Added links to all projects on GitHub.

--- a/index.html
+++ b/index.html
@@ -97,6 +97,9 @@
           <a href="#" class="image main"
             ><img src="images/pic01.jpeg" alt=""
           /></a>
+            <p>
+              The agricultural sector faces challenges in modernizing due to extensive manual labor required for plant monitoring and identification. Artificial Intelligence offers a solution through Convolutional Neural Networks (CNNs) to automate plant classification processes. By accurately classifying plant seedlings, this project aims to reduce manual effort, improve crop yields, and enable higher-order decision-making in agriculture, paving the way for more efficient and sustainable practices.
+            </p>
           <ul class="actions special">
             <li><a href="#" class="button large">Full Story</a></li>
           </ul>
@@ -108,84 +111,76 @@
           <article class="post featured">
             <header class="major">
               <h2>
-                <a href="#"
+                <a href="https://github.com/todd-wilson/portfolio/blob/main/bank-churn-prediction/Bank-Churn-Prediction.ipynb"
                   >Deep Neural Networks</a>
               </h2>
 			<h3>Bank Churn Prediction</h3>
             </header>
-            <a href="#" class="image main"
+            <a href="https://github.com/todd-wilson/portfolio/blob/main/bank-churn-prediction/Bank-Churn-Prediction.ipynb" class="image main"
               ><img src="images/pic02.jpeg" alt=""
             /></a>
             <p>
-              Donec eget ex magna. Interdum et malesuada fames ac ante ipsum
-              primis in faucibus. Pellentesque venenatis dolor imperdiet dolor
-              mattis sagittis magna etiam.
+              This academic project focuses on using a neural network classifier to predict customer churn in banking. By applying machine learning techniques, the aim is to provide actionable insights for optimizing service quality and improving customer retention strategies. 
             </p>
             <ul class="actions special">
-              <li><a href="#" class="button">Full Story</a></li>
+              <li><a href="https://github.com/todd-wilson/portfolio/blob/main/bank-churn-prediction/Bank-Churn-Prediction.ipynb" class="button">Full Story</a></li>
             </ul>
           </article>
           <article class="post featured">
             <header class="major">
               <h2>
-                <a href="#"
+                <a href="https://github.com/todd-wilson/portfolio/blob/main/credit-card-churn-prediction/Credit-Card-Churn-Prediction.ipynb"
                   >Advanced Machine Learning</a
                 >
               </h2>
 			<h3>Credit Card User Churn Prediction</h3>
             </header>
-            <a href="#" class="image fit"
+            <a href="https://github.com/todd-wilson/portfolio/blob/main/credit-card-churn-prediction/Credit-Card-Churn-Prediction.ipynb" class="image fit"
               ><img src="images/pic03.jpeg" alt=""
             /></a>
             <p>
-              Donec eget ex magna. Interdum et malesuada fames ac ante ipsum
-              primis in faucibus. Pellentesque venenatis dolor imperdiet dolor
-              mattis sagittis magna etiam.
+              In this project, the focus lies on predicting customer churn within credit card services. Given the decline in credit card users and the potential loss of revenue associated with various fees, the objective is to develop a classification model to identify customers likely to leave their credit card services. By leveraging this model, businesses can proactively improve service quality and retention strategies to mitigate customer attrition.
             </p>
             <ul class="actions special">
-              <li><a href="#" class="button">Full Story</a></li>
+              <li><a href="https://github.com/todd-wilson/portfolio/blob/main/credit-card-churn-prediction/Credit-Card-Churn-Prediction.ipynb" class="button">Full Story</a></li>
             </ul>
           </article>
           <article class="post featured">
             <header class="major">
               <h2>
-                <a href="#"
+                <a href="https://github.com/todd-wilson/portfolio/blob/main/personal-loan-campaign/Personal-Loan-Campaign.ipynb"
                   >Machine Learning</a
                 >
               </h2>
 			<h3>Personal Loan Campaign</h3>
             </header>
-            <a href="#" class="image fit"
+            <a href="https://github.com/todd-wilson/portfolio/blob/main/personal-loan-campaign/Personal-Loan-Campaign.ipynb" class="image fit"
               ><img src="images/pic04.jpeg" alt=""
             /></a>
             <p>
-              Donec eget ex magna. Interdum et malesuada fames ac ante ipsum
-              primis in faucibus. Pellentesque venenatis dolor imperdiet dolor
-              mattis sagittis magna etiam.
+              This project is dedicated to building a model that predicts the likelihood of liability customers purchasing personal loans. With the goal of expanding the asset customer base and increasing loan business, the objective is to identify potential customers who are more likely to purchase loans. By analyzing customer attributes and segmentation, the model will aid marketing efforts in targeting campaigns more effectively, thus enhancing success rates in loan conversions.
             </p>
             <ul class="actions special">
-              <li><a href="#" class="button">Full Story</a></li>
+              <li><a href="https://github.com/todd-wilson/portfolio/blob/main/personal-loan-campaign/Personal-Loan-Campaign.ipynb" class="button">Full Story</a></li>
             </ul>
           </article>
           <article class="post featured">
             <header class="major">
               <h2>
-                <a href="#"
+                <a href="https://github.com/todd-wilson/portfolio/blob/main/foodhub-project/Foodhub-EDA.ipynb"
                   >Exploratory Data Analysis Using Python</a
                 >
               </h2>
 			<h3>Foodhub Analysis and Recommendations</h3>
             </header>
-            <a href="#" class="image fit"
+            <a href="https://github.com/todd-wilson/portfolio/blob/main/foodhub-project/Foodhub-EDA.ipynb" class="image fit"
               ><img src="images/pic05.jpeg" alt=""
             /></a>
             <p>
-              Donec eget ex magna. Interdum et malesuada fames ac ante ipsum
-              primis in faucibus. Pellentesque venenatis dolor imperdiet dolor
-              mattis sagittis magna etiam.
+              This project delves into analyzing data from a food aggregator service to understand the demand for different restaurants. As online food delivery becomes increasingly popular among students and professionals, identifying restaurant demand is essential for enhancing customer experience. The goal is to provide actionable insights to improve business operations by addressing key questions about popular restaurants, peak demand times, and customer preferences.
             </p>
             <ul class="actions special">
-              <li><a href="#" class="button">Full Story</a></li>
+              <li><a href="https://github.com/todd-wilson/portfolio/blob/main/foodhub-project/Foodhub-EDA.ipynb" class="button">Full Story</a></li>
             </ul>
           </article>
           <!-- <article class="post featured">
