--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
               The agricultural sector faces challenges in modernizing due to extensive manual labor required for plant monitoring and identification. Artificial Intelligence offers a solution through Convolutional Neural Networks (CNNs) to automate plant classification processes. By accurately classifying plant seedlings, this project aims to reduce manual effort, improve crop yields, and enable higher-order decision-making in agriculture, paving the way for more efficient and sustainable practices.
             </p>
           <ul class="actions special">
-            <li><a href="#" class="button large">Full Story</a></li>
+            <li><a href="#" class="button large">Python Notebook</a></li>
           </ul>
         </article>
 
@@ -142,7 +142,7 @@
               In this project, the focus lies on predicting customer churn within credit card services. Given the decline in credit card users and the potential loss of revenue associated with various fees, the objective is to develop a classification model to identify customers likely to leave their credit card services. By leveraging this model, businesses can proactively improve service quality and retention strategies to mitigate customer attrition.
             </p>
             <ul class="actions special">
-              <li><a href="https://github.com/todd-wilson/portfolio/blob/main/credit-card-churn-prediction/Credit-Card-Churn-Prediction.ipynb" class="button">Full Story</a></li>
+              <li><a href="https://github.com/todd-wilson/portfolio/blob/main/credit-card-churn-prediction/Credit-Card-Churn-Prediction.ipynb" class="button">Python Notebook</a></li>
             </ul>
           </article>
           <article class="post featured">
@@ -161,7 +161,7 @@
               This project is dedicated to building a model that predicts the likelihood of liability customers purchasing personal loans. With the goal of expanding the asset customer base and increasing loan business, the objective is to identify potential customers who are more likely to purchase loans. By analyzing customer attributes and segmentation, the model will aid marketing efforts in targeting campaigns more effectively, thus enhancing success rates in loan conversions.
             </p>
             <ul class="actions special">
-              <li><a href="https://github.com/todd-wilson/portfolio/blob/main/personal-loan-campaign/Personal-Loan-Campaign.ipynb" class="button">Full Story</a></li>
+              <li><a href="https://github.com/todd-wilson/portfolio/blob/main/personal-loan-campaign/Personal-Loan-Campaign.ipynb" class="button">Python Notebook</a></li>
             </ul>
           </article>
           <article class="post featured">
@@ -180,7 +180,7 @@
               This project delves into analyzing data from a food aggregator service to understand the demand for different restaurants. As online food delivery becomes increasingly popular among students and professionals, identifying restaurant demand is essential for enhancing customer experience. The goal is to provide actionable insights to improve business operations by addressing key questions about popular restaurants, peak demand times, and customer preferences.
             </p>
             <ul class="actions special">
-              <li><a href="https://github.com/todd-wilson/portfolio/blob/main/foodhub-project/Foodhub-EDA.ipynb" class="button">Full Story</a></li>
+              <li><a href="https://github.com/todd-wilson/portfolio/blob/main/foodhub-project/Foodhub-EDA.ipynb" class="button">Python Notebook</a></li>
             </ul>
           </article>
           <!-- <article class="post featured">
