--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
               This academic project focuses on using a neural network classifier to predict customer churn in banking. By applying machine learning techniques, the aim is to provide actionable insights for optimizing service quality and improving customer retention strategies. 
             </p>
             <ul class="actions special">
-              <li><a href="https://github.com/todd-wilson/portfolio/blob/main/bank-churn-prediction/Bank-Churn-Prediction.ipynb" class="button">Full Story</a></li>
+              <li><a href="https://github.com/todd-wilson/portfolio/blob/main/bank-churn-prediction/Bank-Churn-Prediction.ipynb" class="button">Python Notebook</a></li>
             </ul>
           </article>
           <article class="post featured">
