Added computer vision project to portfolio.

--- a/index.html
+++ b/index.html
@@ -87,21 +87,21 @@
         <article class="post featured">
           <header class="major">
             <h2>
-              <a href="#"
+              <a href="https://github.com/todd-wilson/portfolio/blob/main/plant-seedling-classification/Plant-Seedling-Classification.ipynb"
                 >Computer Vision</a>
             </h2>
             <p>
-              Plant Seedling Classification (coming soon)
+              Plant Seedling Classification
             </p>
           </header>
-          <a href="#" class="image main"
+          <a href="https://github.com/todd-wilson/portfolio/blob/main/plant-seedling-classification/Plant-Seedling-Classification.ipynb" class="image main"
             ><img src="images/pic01.jpeg" alt=""
           /></a>
             <p>
               The agricultural sector faces challenges in modernizing due to extensive manual labor required for plant monitoring and identification. Artificial Intelligence offers a solution through Convolutional Neural Networks (CNNs) to automate plant classification processes. By accurately classifying plant seedlings, this project aims to reduce manual effort, improve crop yields, and enable higher-order decision-making in agriculture, paving the way for more efficient and sustainable practices.
             </p>
           <ul class="actions special">
-            <li><a href="#" class="button large">Python Notebook</a></li>
+            <li><a href="https://github.com/todd-wilson/portfolio/blob/main/plant-seedling-classification/Plant-Seedling-Classification.ipynb" class="button large">Python Notebook</a></li>
           </ul>
         </article>
 
