--- a/index.html
+++ b/index.html
@@ -87,6 +87,30 @@
         <article class="post featured">
           <header class="major">
             <h2>
+              <a href="https://github.com/todd-wilson/portfolio/blob/main/support-ticket-categorization/Support-Ticket-Categorization.ipynb"
+                >Natural Language Processing</a>
+            </h2>
+            <p>
+              Support Ticket Categorization
+            </p>
+          </header>
+          <a href="https://github.com/todd-wilson/portfolio/blob/main/support-ticket-categorization/Support-Ticket-Categorization.ipynb" class="image main"
+            ><img src="images/pic01.jpeg" alt=""
+          /></a>
+            <p>
+              This project uses Llama 2 and prompt engineering to create an advanced support ticket system. This system classifies tickets, assigns tags, and prioritizes them based on sentiment. The goal is prompt resolution, helping the business address urgent issues and allocate resources effectively.
+	    </p>
+	<ul class="actions special">
+            <li><a href="https://github.com/todd-wilson/portfolio/blob/main/support-ticket-categorization/Support-Ticket-Categorization.ipynb" class="button large">Python Notebook</a></li>
+          </ul>
+        </article>
+
+        <!-- Posts -->
+        <!-- <section class="posts"> -->
+		<section class="posts"></section>
+	<article class="post featured">
+          <header class="major">
+            <h2>
               <a href="https://github.com/todd-wilson/portfolio/blob/main/plant-seedling-classification/Plant-Seedling-Classification.ipynb"
                 >Computer Vision</a>
             </h2>
@@ -104,11 +128,7 @@
             <li><a href="https://github.com/todd-wilson/portfolio/blob/main/plant-seedling-classification/Plant-Seedling-Classification.ipynb" class="button large">Python Notebook</a></li>
           </ul>
         </article>
-
-        <!-- Posts -->
-        <!-- <section class="posts"> -->
-		<section class="posts"></section>
-          <article class="post featured">
+	    <article class="post featured">
             <header class="major">
               <h2>
                 <a href="https://github.com/todd-wilson/portfolio/blob/main/bank-churn-prediction/Bank-Churn-Prediction.ipynb"
