--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             </p>
           </header>
           <a href="https://github.com/todd-wilson/portfolio/blob/main/support-ticket-categorization/Support-Ticket-Categorization.ipynb" class="image main"
-            ><img src="images/natural-language-processing.jpeg" alt=""
+            ><img src="images/natural-language-processing.PNG" alt=""
           /></a>
             <p>
               This project uses Llama 2 and prompt engineering to create an advanced support ticket system. This system classifies tickets, assigns tags, and prioritizes them based on sentiment. The goal is prompt resolution, helping the business address urgent issues and allocate resources effectively.
